kubernetes/c4-active-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: c4-active
  labels:
    expose: "true"
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: c4-active
