kubernetes/c4-active-destinarion-rule-release.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: c4-active-40-60v1v2
  namespace: c4
  creationTimestamp: '2019-08-19T19:19:05Z'
  labels:
    app: c4-active
    version: v1
  annotations:
    at: '25-08-2019 12:00:00'
    users: fernando
spec:
  host: c4-active
  subsets:
  - labels:
      version: v1
    name: c4-active-v1
  - labels:
      version: v2
    name: c4-active-v2
