kubernetes/c4-active-virtual-service-release.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: c4-active-40-60v1v2
  namespace: c4
  labels:
    app: c4-active
    version: v1
  annotations:
    at: '25-08-2019 12:00:00'
    users: fernando
spec:
  hosts:
  - '*'
  gateways:
  - service-gateway-c4
  http:
  - match:
    - uri:
        prefix: /api/v1/active
    route:
    - destination:
        host: c4-active
        port:
          number: 8080
        subset: c4-active-v1
      weight: 10
    - destination:
        host: c4-active
        port:
          number: 8080
        subset: c4-active-v2
      weight: 90
